<resources>
    <string name="app_name">MyTicTacToe</string>
    <string name="btn_start_game_text">Начать игру</string>
    <string name="btn_restart_game_text">Начать заново</string>
    <string name="tv_next_step_text">Следующий ход:</string>
    <string name="winner_is_text">Победитель:</string>
    <string name="drawn_game_text">Ничья!</string>
    <string name="p2p_mode_1_text">Ограниченние числа фишек</string>
    <string name="p2p_classic_mode_text">Классический</string>
    <string name="game_mode_rules_classic">Классический режим игры, никаких ограничений</string>
    <string name="game_mode_rules_mode_1">Фигуры поставленные 3 хода назад будут исчезать</string>
</resources>