<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/game_mode_chooser_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/start_game_button"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_white_bg"
        android:visibility="visible"
        tools:visibility="visible"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <RadioGroup
            android:checkedButton="@+id/p2p_classic_mode"
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/blue_out_line"
            android:orientation="horizontal">


            <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginStart="1dp"
                android:id="@+id/p2p_classic_mode"
                android:background="@drawable/toggle_widget_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/p2p_classic_mode_text"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <RadioButton
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:id="@+id/p2p_mode_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/p2p_mode_1_text"
                android:textSize="11sp"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

        <TextView
            android:id="@+id/mode_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_mode_rules_classic"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="10sp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/gray"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/next_step_info_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_white_bg"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="gone"
        >

        <TextView
            android:id="@+id/next_step_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_next_step_text"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#9C9C9C"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/next_step_mark"
            />

        <ImageView
            android:id="@+id/next_step_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:src="@drawable/cross" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/winner_info_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_white_bg"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="gone"
        >

        <TextView
            android:id="@+id/winner_info_box_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winner_is_text"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#9C9C9C"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/winner_info_box_mark"
            />

        <ImageView
            android:id="@+id/winner_info_box_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:src="@drawable/cross" />

    </RelativeLayout>



    <FrameLayout
    android:id="@+id/fragment_container"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_centerInParent="true"
    android:background="@drawable/rounded_white_bg"
    android:visibility="gone"
    tools:visibility="gone"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_game_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_game_text"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_active_btn_bg"
        android:textColor="@color/white"
        android:visibility="visible"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_game_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_restart_game_text"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_inactive_btn_bg"
        android:textColor="#1A7DCC"
        android:visibility="gone"
        tools:visibility="gone"
        />

</RelativeLayout>
